# dynamic-gha-dhall-poc

./: README.md  dynamic-gha-dhall-poc.cabal  stack-9.0.1.yaml
.github/workflows/: haskell.yml
configs/: ExtendedSchema.dhall  build.dhall
