name:               dynamic-gha-dhall-poc
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/dynamic-gha-dhall-poc#readme
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable dynamic-gha-dhall-poc
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base        >=4.7 && <5
    , containers
    , text

test-suite dynamic-gha-dhall-poc
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  build-depends:
      base
    , tasty
